--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         // ================================
 
         // Array of accepted passwords - add as many as you want!
-        const CORRECT_PASSWORDS = ["Love123", "ILoveYou", "YesPlease", "Forever123", "OurSpecialWord"];
+        const CORRECT_PASSWORDS = ["Shanky35"];
         
         // Or if you want case-insensitive comparison:
         // const CORRECT_PASSWORDS = ["love123", "iloveyou", "yesplease", "forever123", "ourspecialword"];
@@ -523,3 +523,4 @@
 </body>
 
 </html>
+
